# gcompiler

./: Cargo.toml  LICENSE  README.md
editor/nvim/ftdetect/: ggraph.vim
editor/nvim/syntax/: ggraph.vim
examples/: compile_time.g  graph.g  line.g  point.g  simple.g  test1.g  test1.q
src/: args.rs  interpreter.rs  main.rs  parser.rs
