[package]
name = "gcompiler"
version = "0.1.0"
edition = "2021"
authors = ["luxluth"]
description = "The .g Graphs compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap-stdin = "0.2.1"
